# QAL

./: CMakeLists.txt  main.cpp
